Ensure buttons always are right-aligned

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -139,7 +139,7 @@
                 </mat-form-field>
             </div>
         </div>
-        <div class="dialog-buttons" mat-dialog-actions style="float: right">
+        <div class="dialog-buttons" mat-dialog-actions>
             <button mat-button (click)="onNoClick()" tabindex="2">Cancel</button>
             <!-- <div *ngIf="selectedItem.type === 'Number' else noStateDescription">  <button mat-button [disabled]="!rateControl.valid &&  selectedItem.type === 'Number'" (click)="save()" tabindex="-1">Save</button> </div>  -->
             <button mat-button 
