Removed "required" from description

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
@@ -80,7 +80,7 @@
 			</h3>
 		</div>
 		<div style="width: 70%">
-			<mat-form-field> <textarea matInput [formControl]="requiredFormControl"  [(ngModel)]="rule.description"></textarea> </mat-form-field>
+			<mat-form-field> <textarea matInput [(ngModel)]="rule.description"></textarea> </mat-form-field>
 		</div>
 	</div>
 	<div style="display: flex">
