Input check for local time thing added

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/module-creator-dialog/module-creator-dialog.component.html
@@ -38,12 +38,12 @@
                 is
                 <mat-form-field>
                     <input #datePicker matInput [matDatepicker]="picker" placeholder="Choose a date" [(formControl)]="rateControl">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
+                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle> 
+                  <mat-datepicker #picker></mat-datepicker> 
                 </mat-form-field>
                 at
                 <mat-form-field style="width: 75px">
-                    <input matInput [(ngModel)]="stateInput" type="time">
+                    <input matInput [(ngModel)]="stateInput"  [(formControl)]="rateControl" type="time">
                 </mat-form-field>
             </div>
             </div>
@@ -116,7 +116,7 @@
                 </mat-form-field>
                 at
                 <mat-form-field style="width: 75px">
-                    <input matInput [(ngModel)]="stateInput" type="time">
+                    <input matInput [(ngModel)]="stateInput" [(formControl)]="rateControl" type="time">
                 </mat-form-field>
             </div>
         </div>
