Added check for missing dependencies

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.css
@@ -8,6 +8,10 @@
 	float: middle;
 	clear: both;
 }
+
+.missingExtensionClass {
+	margin-top: 30px;
+}
 @media (max-width:800px) {
   .overviewdiv {
     width:100%;
