--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.css
@@ -15,6 +15,13 @@
 	vertical-align: middle;
 }
 
+.inner-item-disabled {
+    background-color: foreground;
+    margin: .5em;
+    padding: .3em 0;
+    border-radius: 5px;
+}
+
 .inner-item {
 	background-color: foreground;
 	margin: .5em;
