--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -6,7 +6,12 @@
     </ul>
     <ul *ngIf="mod && mod.id" [@fadeIn] class="itemsdiv" class="items">
         <li style="width: 90% !important;">
-            <div class="inner-item" (click)="onSelect(mod.thing)">
+            <div *ngIf="mod.unsupportedModule" class="inner-item-disabled">
+                The {{mod.type}} has been created in openHAB, and can't be edited here.<br>
+                <br>
+                Name: <i>{{mod.label}}</i>.
+            </div>
+            <div class="inner-item" (click)="onSelect(mod.thing)" *ngIf="!mod.unsupportedModule">
                 <div *ngIf="mod.type === 'event'">
                     <div *ngIf="mod.itemName && item">
                         <div *ngIf="mod.operator && mod.operator === '?'">
