Changed rule to recipe for user

--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -7,7 +7,7 @@
     <ul *ngIf="mod && mod.id" [@fadeIn] class="itemsdiv" class="items">
         <li style="width: 90% !important;">
             <div *ngIf="mod.unsupportedModule" class="inner-item-disabled">
-                The {{mod.type}} has been created in openHAB, and can't be edited here.<br>
+                This {{mod.type}} has been created in openHAB, and can't be edited here.<br>
                 <br>
                 Name: <i>{{mod.label}}</i>.
             </div>
