--- a/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/create/create.component.html
@@ -1,9 +1,9 @@
-<h1 class="headers">Create new rule</h1>
+<h1 class="headers">Create new recipe</h1>
 <div *ngIf="step == -2" class="creatediv">
     <h3>Devices could not be fetched. Please verify that openHAB is working correctly.</h3>
 </div>
 <div *ngIf="step == -1" class="creatediv">
-    <h3>No devices could be found. Please add 1 or more devices before creating rules.</h3>
+    <h3>No devices could be found. Please add 1 or more devices before creating recipes.</h3>
 </div>
 <div *ngIf="step == 0" class="loader">
 	<mat-progress-spinner color="primary" mode="indeterminate"> </mat-progress-spinner>
@@ -33,7 +33,7 @@
 </div>
 <div *ngIf="step === 2" class="creatediv animate-from-right">
 	<div class="itemsdiv">
-		<h2>What should activate the rule?</h2>
+		<h2>What should activate the recipe?</h2>
 		<div class="events">
 			<app-dynamic-component [things]="things" [mods]="rule.events" [moduleType]="'event'" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
 		</div>
@@ -45,7 +45,7 @@
 </div>
 <div *ngIf="step === 3" class="creatediv animate-from-right">
 	<div class="itemsdiv">
-		<h2>What should happen when the rule activates?</h2>
+		<h2>What should happen when the recipe activates?</h2>
 		<div class="actions">
 			<app-dynamic-component [things]="thingsWithEditableItems" [mods]="rule.actions" [moduleType]="'action'" (modUpdated)="onRuleUpdated($event)" (modDeleted)="onModDeleted($event)"></app-dynamic-component>
 		</div>
