--- a/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/overview/overview.component.html
@@ -10,7 +10,7 @@
 </div>
 <div *ngIf="!isLoading && !extensionMissing && !loadError" class="overviewdiv">
 	<div class="button-row">
-        <button mat-fab color="primary" (click)="openCreate(null)"><mat-icon>add</mat-icon></button>
+        <button mat-fab color="primary" (click)="openCreate(null)" matTooltip="Create new recipe" matTooltipPosition="below"><mat-icon>add</mat-icon></button>
     </div>
      <div class="headers"><h2> Existing recipes</h2></div>
      <div *ngIf="!rules || rules.length === 0">
@@ -23,7 +23,7 @@
 		</div>
 		
 		<mat-slide-toggle [checked]="rule.enabled" (change)="enableDisableRule(rule)" style="width: 15%; height: auto;"></mat-slide-toggle>
-		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)"><mat-icon>edit</mat-icon></button></div>
-		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)"><mat-icon>delete</mat-icon></button></div>
+		<div style="width: 15%"><button mat-icon-button (click)="openCreate(rule)" matTooltip="Edit recipe" matTooltipPosition="below"><mat-icon>edit</mat-icon></button></div>
+		<div style="width: 15%"><button mat-icon-button (click)="deleteRule(rule)" matTooltip="Delete recipe" matTooltipPosition="below"><mat-icon>delete</mat-icon></button></div>
 	</mat-list-item> </mat-list>
 </div>
