--- a/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
+++ b/ui/org.openhab.ui.automation/web-src/src/app/components/items/items.component.html
@@ -15,7 +15,7 @@
                 <div *ngIf="mod.type === 'event'">
                     <div *ngIf="mod.itemName && item">
                         <div *ngIf="mod.operator && mod.operator === '?'">
-                            <i>{{item.label}}</i> of <i>{{mod.thing.label}} is updated</i>
+                            <i>{{item.label}}</i> of <i>{{mod.thing.label}} is changed</i>
                         </div>
                         <div *ngIf="mod.operator && mod.operator !== '?'">
                             <i>{{item.label}}</i> of <i>{{mod.thing.label}}<span *ngIf="item.type === 'Number'"> {{getNumerText()}}</span> <span *ngIf="item.type === 'Switch'">is turned to </span> {{parseState(mod.state)}}
@@ -29,12 +29,12 @@
                 </div>
                 <div *ngIf="mod.type === 'condition'">
                     <div *ngIf="mod.itemName && item">
-                        <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'">turned to </span> {{parseState(mod.state)}}
+                        If <i>{{item.label}}</i> of <i>{{mod.thing.label}}</i> is <i> <span *ngIf="item.type === 'Number'">{{getOperator(mod.operator)}} </span> <span *ngIf="item.type === 'Switch'"> </span> {{parseState(mod.state)}}
                         </i>
                         <span *ngIf="item.stateDescription && item.stateDescription.pattern && !item.stateDescription.pattern.split(' ').pop().startsWith('%')">{{item.stateDescription.pattern.split(' ').pop()}}</span>
                     </div>
                     <div *ngIf="mod.time && mod.time.split('/').length > 1">
-                        The time is between <i>{{mod.time.split('/')[0]}}</i> and <i>{{mod.time.split('/')[1]}}</i>
+                        If the time is between <i>{{mod.time.split('/')[0]}}</i> and <i>{{mod.time.split('/')[1]}}</i>
                     </div>
                 </div>
                 <div *ngIf="mod.type === 'action'">
